<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>it.greenvulcano.gvesb</groupId>
	<artifactId>gvlegacy</artifactId>
	<version>4.1.0</version>
	<packaging>pom</packaging>

	<name>GreenVulcano ESB Legacy components</name>

	<organization>
		<name>GreenVulcano Technologies</name>
		<url>http://www.greenvulcanotechnologies.com</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gvesb.version>4.1.0</gvesb.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
		<maven-bundle-plugin.version>3.2.0</maven-bundle-plugin.version>

		<version.osgi>5.0.0</version.osgi>
		<version.pax-logging>1.9.1</version.pax-logging>
		<version.junit>4.11</version.junit>

		<cloud.nexus.content>http://mvn.greenvulcano.com/nexus/content</cloud.nexus.content>
	</properties>


	<repositories>
		<repository>
			<id>nexus-cloud</id>
			<name>Cloud Nexus instance - PUBLIC</name>
			<url>${cloud.nexus.content}/groups/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>java-net2</id>
			<name>Java.net Maven Repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>repository.jboss.com</id>
			<name>Jboss Repository for Maven</name>
			<url>http://repository.jboss.org/nexus/content/repositories/public</url>
		</repository>
		<repository>
			<id>greenvulcano</id>
			<name>GreenVulcano repo on Cloud Nexus instance - PUBLIC</name>
			<url>http://mvn.greenvulcano.com/nexus/content/groups/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

       <distributionManagement>
                <repository>
                        <id>nexus-cloud</id>
                        <name>Cloud Nexus instance - RELEASES </name>
                        <url>${cloud.nexus.content}</url>
                </repository>
                <snapshotRepository>
                        <id>nexus-cloud</id>
                        <name>Cloud Nexus instance - SNAPSHOTS</name>
                        <url>${cloud.nexus.content}</url>
                </snapshotRepository>
        </distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>${version.osgi}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<version>${version.osgi}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-log4j2</artifactId>
			<version>${version.pax-logging}</version>
			<scope>provided</scope>
		</dependency>

		<!-- *************** TEST *************** -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>${version.junit}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<id>default-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>gvdatahandler</module>
		<module>gvadapter-http</module>
		<module>gvvcl-jms</module>
		<module>gvvcl-ws</module>
		<module>gvvcl-mail</module>
		<module>gvvcl-excel</module>
		<module>gvsocial</module>
		<module>gvvcl-rsh</module>
		<module>gvvcl-file</module>
		<module>gvvcl-birt</module>
		<module>gvdebug</module>
	</modules>

</project>
